core/src/parser/assembly/snapshots/vicis_core__parser__assembly__module__parse_example_ary.snap
---
source: core/src/parser/assembly/module.rs
assertion_line: 151
expression: module

---
source_filename = "a.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-pc-linux-gnu"


define external dso_local default i32 @main() #0 {
0:
    %1 = alloca i32, i32 1, align 4
    %2 = alloca [10 x i32], i32 1, align 16
    %3 = alloca i32, i32 1, align 4
    store i32 0, i32* %1, align 4
    store i32 0, i32* %3, align 4
    br label %4
4:
    %5 = load i32, i32* %3, align 4
    %6 = icmp slt i32 %5, 10
    br i1 %6, label %7, label %15
7:
    %8 = load i32, i32* %3, align 4
    %9 = load i32, i32* %3, align 4
    %10 = sext i32 %9 to i64
    %11 = getelementptr inbounds [10 x i32], [10 x i32]* %2, i64 0, i64 %10
    store i32 %8, i32* %11, align 4
    br label %12
12:
    %13 = load i32, i32* %3, align 4
    %14 = add nsw i32 %13, 1
    store i32 %14, i32* %3, align 4
    br label %4
15:
    ret i32 0
}

attributes #0 = { noinline nounwind optnone uwtable "correctly-rounded-divide-sqrt-fp-math"="false" "disable-tail-calls"="false" "frame-pointer"="all" "less-precise-fpmad"="false" "min-legal-vector-width"="0" "no-infs-fp-math"="false" "no-jump-tables"="false" "no-nans-fp-math"="false" "no-signed-zeros-fp-math"="false" "no-trapping-math"="false" "stack-protector-buffer-size"="8" "target-cpu"="x86-64" "target-features"="+fxsr,+mmx,+sse,+sse2,+x87" "unsafe-fp-math"="false" "use-soft-float"="false" }
!llvm.ident = !{!1}
!0 = !{i32 1, !"wchar_size", i32 4}
!llvm.module.flags = !{!0}
!1 = !{!"clang version 10.0.0-4ubuntu1 "}

